<resources>
    <string name="app_name">Plant Lady</string>

    <string name="log_show_loading">Show Loading</string>
    <string name="log_hide_loading">Hide Loading</string>

    <string name="main_activity_subtitle">FIND YOUR PERFECT PLANT</string>
    <string name="main_activity_button_take_quiz">Find it now</string>
    <string name="main_activity_button_explore">explore</string>

    <string name="explore_activity_title">explore</string>
    <string name="explore_activity_subtitle">and find your next plant</string>
    <string name="explore_activity_search_hint">Let\'s find the perfect one for you</string>

    <string name="quiz_activity_question_count_param">&#160;question %1$d / 7&#160;</string>
    <string name="quiz_activity_question_count">&#160;question 1 / 7&#160;</string>

    <string name="result_activity_your_plant_title">your plant is</string>
    <string name="result_activity_your_plant">Lorem ipsum dolor sit amet</string>
    <string name="result_activity_your_plant_family">(%1$s)</string>

    <string name="quiz_result_activity_subtitle">HERE ARE SOME OPTIONS FOR YOU</string>
    <string name="quiz_result_activity_title">results</string>

    <string name="or_take_the_quiz_again"><u>Or take the quiz again</u></string>
    <string name="or_take_the_quiz_to_find_your_plant">Or take the quiz to find your plant</string>

    <string name="by_type_result_list_activity_subtitle">plants by type - %1$s</string>
    <string name="by_room_result_list_activity_subtitle">plants by room - %1$s</string>
    <string name="by_text_result_list_activity_subtitle">here are results for \"%1$s\"</string>

    <string name="activity_result_empty_state_message">"Ops… seems like we\n didn’t find anything"</string>

    <string name="detail_activity_origin_desc_title">origin</string>
    <string name="detail_activity_poisonous_desc_title">toxic</string>
    <string name="detail_activity_overview_desc_title">overview</string>
    <string name="detail_activity_water_desc_title">water</string>
    <string name="detail_activity_light_desc_title">light</string>

    <string name="base_activity_ops_title">ops</string>
    <string name="base_activity_something_went_wrong">Something went wrong</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_login">LoginActivity</string>


</resources>
