<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context="br.com.ladyplant.result.QuizResultListActivity">

    <TextView
        android:id="@+id/result_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/explore_activity_margin"
        android:paddingEnd="@dimen/explore_activity_margin"
        android:text="@string/quiz_result_activity_title"
        android:textAppearance="@style/ScreenTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/result_subtitle"
        style="@style/Subtitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/subtitle_margin_top"
        android:paddingStart="@dimen/explore_activity_margin"
        android:paddingEnd="@dimen/explore_activity_margin"
        android:text="@string/quiz_result_activity_subtitle"
        android:textAllCaps="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/result_title" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/result_list"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="32dp"
        android:paddingStart="@dimen/explore_activity_margin"
        android:paddingEnd="@dimen/explore_activity_margin"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/result_subtitle" />

    <ImageView
        android:id="@+id/empty_state_img"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_empty_state"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/empty_state_msg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:paddingStart="@dimen/explore_activity_margin"
        android:paddingEnd="@dimen/explore_activity_margin"
        android:text="@string/activity_result_empty_state_message"
        android:textAppearance="@style/EmptyStateMessage"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/empty_state_img" />

</androidx.constraintlayout.widget.ConstraintLayout>
