<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    android:paddingTop="@dimen/explore_activity_padding_top"
    tools:context=".ExploreActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginBottom="24dp"
        android:orientation="vertical"
        android:paddingLeft="24dp"
        android:paddingRight="24dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/halimunw7jn"
            android:text="@string/explore_activity_title"
            android:textColor="@android:color/white"
            android:textSize="30sp" />

        <TextView
            style="@style/Subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/explore_activity_subtitle" />

        <EditText
            android:id="@+id/search_plant"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/edit_text_background"
            android:drawableRight="@drawable/ic_mdi_search"
            android:ellipsize="end"
            android:fontFamily="@font/quicksandvariablefont_wght"
            android:gravity="center|left"
            android:hint="@string/explore_activity_search_hint"
            android:maxLines="1"
            android:textSize="14sp">

        </EditText>
    </LinearLayout>

    <ScrollView
        android:id="@+id/pre_filter_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="160dp"
            android:background="@drawable/explore_background"
            android:orientation="vertical"
            android:paddingBottom="174dp">

            <ImageView
                android:id="@+id/arrow_up"
                android:layout_width="wrap_content"
                android:layout_height="24dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_arrow_drop_up_black_24dp" />
            <ImageView
                android:id="@+id/arrow_down"
                android:layout_width="wrap_content"
                android:layout_height="24dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_arrow_drop_down_black_24dp"
                android:visibility="gone"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/quicksandvariablefont_wght"
                    android:paddingLeft="24dp"
                    android:text="by type"
                    android:textAllCaps="true"
                    android:textColor="@android:color/black"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/by_type_list"
                    style="@style/scrollbarShapeStyle"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="10dp"
                    android:paddingBottom="25dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/quicksandvariablefont_wght"
                    android:paddingLeft="24dp"
                    android:text="by room"
                    android:textAllCaps="true"
                    android:textColor="@android:color/black"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/by_room_list"
                    style="@style/scrollbarShapeStyle"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="10dp"
                    android:paddingBottom="25dp" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>